data/all_generated_tests/raw_wast_tests/call_indirect_InvalidorInconsistentControlFlowGraph_4374.wast
;; 3. **Call with Insufficient Operands**: Attempt to invoke `call_indirect` with fewer operands on the stack than required by the function signature.    - **Constraint**: Operand stack underflows during function call.    - **CFG Relation**: Tests CFG handling of operand stack and ensures invalid conditions trigger appropriate execution paths and traps.

(assert_invalid
  (module
    (type $sig (func (param i32) (result i32)))
    (table 1 funcref)
    (elem (i32.const 0) $func)
    (func $func (param i32) (result i32) (i32.const 0))
    (func (type $sig) (call_indirect (type 0) (i32.const 0))) 
  )
  "type mismatch"
)